# numsys

./: README.md  pyproject.toml  requirements.txt
numeric_system/: __main__.py
numeric_system/core/: __init__.py  graycode.py  ns_float.py  test_ns_int.py
numsys/: __init__.py  cli.py
numsys/core/: __init__.py  _ns.py  decorator.py  graycode.py  ns_float.py  ns_int.py  test_graycode.py  test_ns_float.py  test_ns_int.py
src/numsys/: __init__.py  __main__.py  _ns.py  _ns2.py  cli.py  decorator.py  graycode.py  log.py
src/numsys/ns/: __init__.py  _float.py  _int.py  _ns.py
tests/: test_graycode.py  test_ns.py  test_ns2.py  test_ns_float.py  test_ns_int.py
