[project]
name = "numsys"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Jason Swift", email = "anemele@outlook.com" }]
requires-python = ">=3.11"
dependencies = ["click>=8.1.8"]

[project.scripts]
ns = "numsys.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["pytest>=8.3.4"]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
